src/objects/Apttus_Proposal__Proposal__c.object
<CustomObject>
    <description>Quote/Proposal object which holds dates and line items, many quotes/proposals may be related to a single opportunity, a quote/proposal may have many detail lines</description>
    <fields>
        <fullName>Apttus_Proposal__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Prospect Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>SFDC_520_Quote</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Amount__c</fullName>
        <label>Amount</label>
        <summarizedField>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Ext_Net_Price__c</summarizedField>
        <summaryForeignKey>Apttus_Proposal__Proposal_Line_Item__c.Apttus_Proposal__Proposal__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Approval_Stage__c</fullName>
        <description>The proposal approval stage</description>
        <label>Approval Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>In Review</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Generated</fullName>
                </value>
                <value>
                    <fullName>Presented</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__CreateAgreement__c</fullName>
        <description>Create Agreement, if the proposal is accepted.</description>
        <formula>IF (ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Accepted&quot;) , IF($User.UIThemeDisplayed == &apos;Theme4d&apos;,HYPERLINK(&quot;/one/one.app#/alohaRedirect/apex/Apttus_Proposal__ProposalAgreementCreate?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_CreateAgreement&quot;, &quot;Create Agreement&quot;),&quot;_self&quot;),HYPERLINK(&quot;/apex/Apttus_Proposal__ProposalAgreementCreate?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_CreateAgreement&quot;, &quot;Create Agreement&quot;),&quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Agreement</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Description__c</fullName>
        <description>The proposal description</description>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Discount_Percent__c</fullName>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__ExpectedEndDate__c</fullName>
        <description>The expected end date for products and services</description>
        <label>Expected End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__ExpectedStartDate__c</fullName>
        <description>The expected start date for products and services</description>
        <label>Expected Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Generate__c</fullName>
        <description>Generate a quote/proposal</description>
        <formula>IF (Apttus_Proposal__ReadyToGenerate__c, IF($User.UIThemeDisplayed == &apos;Theme4d&apos;,HYPERLINK(&quot;/one/one.app#/alohaRedirect/apex/Apttus_Proposal__ProposalGenerate?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;),HYPERLINK(&quot;/apex/Apttus_Proposal__ProposalGenerate?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_Generate&quot;, &quot;Generate&quot;),&quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Generate a quote/proposal</inlineHelpText>
        <label>Generate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Grand_Total__c</fullName>
        <formula>Apttus_Proposal__Net_Amount__c + Apttus_Proposal__Shipping_Handling__c + Apttus_Proposal__Sales_Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Grand Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Internal_Deadline__c</fullName>
        <label>Internal Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__MakePrimary__c</fullName>
        <description>Make the quote/proposal primary for the associated opportunity</description>
        <formula>IF (AND(LEN(Apttus_Proposal__Opportunity__c ) &gt; 0, NOT(Apttus_Proposal__Primary__c)), HYPERLINK(&quot;/apex/Apttus_Proposal__ProposalMakePrimary?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_MakePrimary&quot;, &quot;Make Primary&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Make Primary</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Net_Amount__c</fullName>
        <formula>Apttus_Proposal__Amount__c  * (1 - Apttus_Proposal__Discount_Percent__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related opportunity</description>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>R00N70000001yUfDEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Payment_Term__c</fullName>
        <label>Payment Term</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Net 30 Days</fullName>
                    <default>true</default>
                    <label>Net 30 Days</label>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>2 Years</fullName>
                </value>
                <value>
                    <fullName>3 Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Present__c</fullName>
        <description>Present the quote/proposal</description>
        <formula>IF (Apttus_Proposal__ReadyToPresent__c, IF($User.UIThemeDisplayed == &apos;Theme4d&apos;,HYPERLINK(&quot;/one/one.app#/alohaRedirect/apex/Apttus_Proposal__ProposalPresent?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_Present&quot;, &quot;Present&quot;),&quot;_self&quot;),HYPERLINK(&quot;/apex/Apttus_Proposal__ProposalPresent?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_Present&quot;, &quot;Present&quot;),&quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Present</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Presented_Date__c</fullName>
        <description>The date the quote/proposal was presented to the customer</description>
        <label>Presented Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Preview__c</fullName>
        <description>Preview a quote/proposal</description>
        <formula>IF($User.UIThemeDisplayed == &apos;Theme4d&apos;,HYPERLINK(&quot;/one/one.app#/alohaRedirect/apex/Apttus_Proposal__ProposalGenerate?id=&quot;&amp;Id &amp; &quot;&amp;action=Preview&quot;, IMAGE(&quot;/resource/Apttus_Proposal__Button_Preview&quot;, &quot;Preview&quot;),&quot;_self&quot;),HYPERLINK(&quot;/apex/Apttus_Proposal__ProposalGenerate?id=&quot;&amp;Id &amp; &quot;&amp;action=Preview&quot;, IMAGE(&quot;/resource/Apttus_Proposal__Button_Preview&quot;, &quot;Preview&quot;),&quot;_self&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Preview a quote/proposal</inlineHelpText>
        <label>Preview</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The primary contact associated with the quote/proposal</description>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Primary__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the quote/proposal is the primary quote to update the related opportunity</description>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Proposal_Approval_Date__c</fullName>
        <description>The date the quote/proposal was approved</description>
        <label>Proposal Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Proposal_Category__c</fullName>
        <description>The quote/proposal category</description>
        <inlineHelpText>The quote/proposal category</inlineHelpText>
        <label>Proposal Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quote</fullName>
                    <default>true</default>
                    <label>Quote</label>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Proposal_Expiration_Date__c</fullName>
        <description>The quote/proposal expiration date</description>
        <label>Proposal Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Proposal_Name__c</fullName>
        <label>Proposal Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__RFP_Intake_Date__c</fullName>
        <label>RFP Intake Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__RFP_Response_Due_Date__c</fullName>
        <label>RFP Response Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__RFP_Stage__c</fullName>
        <label>RFP Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Expected</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>First Revision</fullName>
                </value>
                <value>
                    <fullName>Technical Input</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Internal Approval</fullName>
                </value>
                <value>
                    <fullName>Final Draft</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__RFP_Value__c</fullName>
        <label>RFP Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__ReadyToGenerate__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the proposal is ready for generation</description>
        <label>Ready To Generate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__ReadyToPresent__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether the proposal is ready for presentation</description>
        <label>Ready To Present</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__RelatedProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related or parent quote/proposal</description>
        <inlineHelpText>ID of the related or parent quote/proposal</inlineHelpText>
        <label>Related Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Related Proposals</relationshipLabel>
        <relationshipName>RelatedProposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Request_Approval__c</fullName>
        <formula>HYPERLINK(&quot;/servlet/servlet.Integration?lid=01N700000009u2c&amp;eid=&quot;&amp;Id, IMAGE(&quot;/servlet/servlet.ImageServer?oid=00D70000000JXTN&amp;id=01570000000e6nU&quot;, &quot;Submit&quot;) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Request Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Risk_Factors__c</fullName>
        <description>The risk factors associated with the quote/proposal</description>
        <label>Risk Factors</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Turnaround Time</fullName>
                </value>
                <value>
                    <fullName>Price Pressure</fullName>
                </value>
                <value>
                    <fullName>Technical Delivery</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Sales_Tax_Amount__c</fullName>
        <formula>Apttus_Proposal__Net_Amount__c *  Apttus_Proposal__Sales_Tax_Percent__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Sales_Tax_Percent__c</fullName>
        <label>Sales Tax %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__SendProposal__c</fullName>
        <description>Generate and send a quote/proposal</description>
        <formula>IF (Apttus_Proposal__ReadyToGenerate__c, IF($User.UIThemeDisplayed == &apos;Theme4d&apos;,HYPERLINK(&quot;/one/one.app#/alohaRedirect/apex/Apttus_Proposal__DocGen?id=&quot;&amp;Id + &quot;&amp;context=proposal&quot; + &quot;&amp;name=&quot;&amp;Name, IMAGE(&quot;/resource/Apttus_Proposal__Button_SendProposal&quot;, &quot;Send Proposal&quot;),&quot;_self&quot;), HYPERLINK(&quot;/apex/Apttus_Proposal__DocGen?id=&quot;&amp;Id + &quot;&amp;context=proposal&quot; + &quot;&amp;name=&quot;&amp;Name, IMAGE(&quot;/resource/Apttus_Proposal__Button_SendProposal&quot;, &quot;Send Proposal&quot;),&quot;_self&quot;)), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Generate and send a quote/proposal</inlineHelpText>
        <label>Send Proposal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Shipping_Handling__c</fullName>
        <label>Shipping &amp; Handling</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Special_Terms__c</fullName>
        <description>The special terms associated with the quote/proposal</description>
        <label>Special Terms</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Strategic_Importance__c</fullName>
        <description>The strategic importance of the quote/proposal</description>
        <label>Strategic Importance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Strategic</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Must Win</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__SubmitForApproval__c</fullName>
        <description>Submit the quote/proposal for approval</description>
        <formula>IF (ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Approval Required&quot;), HYPERLINK(&quot;/apex/Apttus_Proposal__ProposalSubmit?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_Proposal__Button_SubmitForApproval&quot;, &quot;Submit for Approval&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submit For Approval</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Proposal__Valid_Until_Date__c</fullName>
        <description>The date until the quote/proposal is valid</description>
        <label>Valid Until Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_QPApprov__Approval_Status__c</fullName>
        <description>The quote approval status</description>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPAsset__ConfigureWithAssets__c</fullName>
        <description>Configure products (with assets) for the quote/proposal</description>
        <formula>IF ( LEN( Apttus_QPConfig__PriceListId__c ) &gt; 0 , HYPERLINK(&quot;/apex/Apttus_QPAsset__ProposalConfiguration?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Configure products (with assets) for the quote/proposal</inlineHelpText>
        <label>Configure Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_QPComply__CreateAgreementWithLineItems__c</fullName>
        <description>Create Agreement with line items, if the proposal is accepted.</description>
        <formula>IF (ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Accepted&quot;) , HYPERLINK(&quot;/apex/Apttus_QPComply__ProposalAgreementCreate?id=&quot; &amp;Id, IMAGE(&quot;/resource/Apttus_QPComply__Button_CreateAgreementWithLineItems&quot;, &quot;Create Agreement with Line Items&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Agreement With Line Items</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_QPComply__MasterAgreementId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the master agreement associated with the quote/proposal</description>
        <inlineHelpText>ID of the master agreement associated with the quote/proposal</inlineHelpText>
        <label>Master Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipLabel>Quote/Proposals</relationshipLabel>
        <relationshipName>QuoteProposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ABOType__c</fullName>
        <description>The asset based order type</description>
        <inlineHelpText>The asset based order type</inlineHelpText>
        <label>ABO Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Add-on</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__Accept__c</fullName>
        <description>Accept the quote/proposal</description>
        <formula>IF (ISPICKVAL(Apttus_Proposal__Approval_Stage__c, &quot;Presented&quot;), HYPERLINK(&quot;/apex/Apttus_QPConfig__ProposalAccept?id=&quot;&amp;Id, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Accept&quot;, &quot;Accept&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Accept</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__AutoActivateOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the order associated with the quote/proposal will be automatically activated when the quote/proposal is accepted.</description>
        <inlineHelpText>Indicates whether the order associated with the quote/proposal will be automatically activated when the quote/proposal is accepted.</inlineHelpText>
        <label>Auto Activate Order ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__AutoCreateBill__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether billing schedules would be created for the order associated with the quote/proposal when the quote/proposal is accepted.</description>
        <inlineHelpText>Indicates whether billing schedules would be created for the order associated with the quote/proposal when the quote/proposal is accepted.</inlineHelpText>
        <label>Auto Create Bill ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__AutoCreateRevenue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether revenue schedules would be created for the order associated with the quote/proposal when the quote/proposal is accepted.</description>
        <inlineHelpText>Indicates whether revenue schedules would be created for the order associated with the quote/proposal when the quote/proposal is accepted.</inlineHelpText>
        <label>Auto Create Revenue ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account associated with the quote/proposal</description>
        <inlineHelpText>ID of the bill to account associated with the quote/proposal</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes (Bill To)</relationshipLabel>
        <relationshipName>QuotesBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ConfigurationEffectiveDate__c</fullName>
        <description>The configuration effective date</description>
        <inlineHelpText>The configuration effective date</inlineHelpText>
        <label>Configuration Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ConfigurationFinalizedDate__c</fullName>
        <description>Date when the configuration was finalized for the quote/proposal</description>
        <label>Configuration Finalized Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ConfigurationSyncDate__c</fullName>
        <description>Date when the configuration was synchronized for the quote/proposal</description>
        <inlineHelpText>Date when the configuration was synchronized for the quote/proposal</inlineHelpText>
        <label>Configuration Sync Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ConfigureNG__c</fullName>
        <description>Configure products for the quote/proposal</description>
        <formula>IF ( LEN( Apttus_QPConfig__PriceListId__c ) &gt; 0 , HYPERLINK(&quot;/apex/Apttus_QPConfig__ProposalConfiguration?id=&quot; &amp;Id &amp; &quot;&amp;flow=NGDefault&quot;, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configure Products (NG)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__Configure__c</fullName>
        <description>Configure products for the quote/proposal</description>
        <formula>IF ( LEN( Apttus_QPConfig__PriceListId__c ) &gt; 0 , HYPERLINK(&quot;/apex/Apttus_QPConfig__ProposalConfiguration?id=&quot; &amp;Id &amp; &quot;&amp;flow=Default&quot;, IMAGE(&quot;/resource/Apttus_QPConfig__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configure Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__DisableCartVersioning__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether cart versioning is disabled for the quote/proposal</description>
        <inlineHelpText>Indicates whether cart versioning is disabled for the quote/proposal</inlineHelpText>
        <label>Disable Cart Versioning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__Intent__c</fullName>
        <description>The intent associated with the quote/proposal</description>
        <inlineHelpText>The intent associated with the quote/proposal</inlineHelpText>
        <label>Intent</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Price Agreement</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__IsAutoAccepted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the quote/proposal was accepted by an auto system operation</description>
        <inlineHelpText>Indicates whether the quote/proposal was accepted by an auto system operation</inlineHelpText>
        <label>Is Auto Accepted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__IsSystemGenerated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is a system generated quote</description>
        <inlineHelpText>Indicates whether this is a system generated quote</inlineHelpText>
        <label>Is System Generated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__IsTaskPending__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether there are any tasks pending for the quote</description>
        <inlineHelpText>Indicates whether there are any tasks pending for the quote</inlineHelpText>
        <label>Is Task Pending</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__LegalEntityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the legal entity associated with the quote/proposal. This links the asset to a legal entity and will be used for downstream billing and revenue functions.</description>
        <inlineHelpText>ID of the legal entity associated with the quote/proposal. This links the asset to a legal entity and will be used for downstream billing and revenue functions.</inlineHelpText>
        <label>Legal Entity</label>
        <referenceTo>Apttus_Config2__LegalEntity__c</referenceTo>
        <relationshipLabel>Quote/Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account location</description>
        <inlineHelpText>ID of the associated account location</inlineHelpText>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PODate__c</fullName>
        <description>The purchase order date</description>
        <inlineHelpText>The purchase order date</inlineHelpText>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PONumber__c</fullName>
        <description>The purchase order number</description>
        <inlineHelpText>The purchase order number</inlineHelpText>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__ParentProposalId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the parent quote/proposal</description>
        <inlineHelpText>ID of the parent quote/proposal</inlineHelpText>
        <label>Parent Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Child Quotes/Proposals</relationshipLabel>
        <relationshipName>ChildQuotesProposals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PartnerAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the partner account who created the quote on behalf of a customer</description>
        <inlineHelpText>ID of the partner account who created the quote on behalf of a customer</inlineHelpText>
        <label>Partner</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Quotes/Proposals (Partner)</relationshipLabel>
        <relationshipName>QuotesProposalsPartner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the payment term associated with the quote/proposal</description>
        <inlineHelpText>ID of the payment term associated with the quote/proposal</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>Quotes</relationshipLabel>
        <relationshipName>Quotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_QPConfig__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated price list</description>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Quotes/Proposals</relationshipLabel>
        <relationshipName>Proposals</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>